# passe-partout

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  ghcr-cleanup.yml
docker/: entrypoint.sh
docs/superpowers/plans/: 2026-04-29-passe-partout.md  2026-04-30-downloads.md
docs/superpowers/specs/: 2026-04-29-passe-partout-design.md  2026-04-30-downloads-design.md
src/passe_partout/: __main__.py  app.py  browser_pool.py  config.py  downloads.py  models.py  nav_capture.py  tab_registry.py
tests/: conftest.py  test_browser_pool.py  test_config.py  test_downloads.py  test_fetch.py  test_health.py  test_idle_chrome_shutdown.py  test_idle_sweeper.py  test_models.py  test_smoke.py  test_tab_ops.py  test_tab_registry.py  test_tabs.py
tests/fixtures/: click_to_download.html  delayed.html  iframe_with_image.html  js.html  normal_page.html  static.html
