[project]
name = "passe-partout"
version = "0.1.0"
description = "HTTP service that fetches web pages through a real Chromium browser to bypass bot walls and paywalls."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "nodriver>=0.38",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiohttp>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passe_partout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "smoke: network-touching end-to-end test (run with -m smoke)",
]
addopts = "-m 'not smoke'"
testpaths = ["tests"]
